test/successor_ml/should_not_compile/val_rec_override.sml
(*
 * This program is valid in Standard ML '97
 * but is invalid in Successor ML.
 *)
datatype t = T;
val rec T = fn x => x;
